--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-editor",
-  "version": "1.0.0",
+  "name": "proudsmart-vue-editor",
+  "version": "1.0.22",
   "description": "vue-editor",
-  "main": "index.js",
+  "main": "dist/veditor.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,7 @@
     "url": "https://github.com/mayalust/vue-editor/issues"
   },
   "bin": {
-    "veditor": "./bootstrap.js"
+    "veditor": "./dist/veditor.js"
   },
   "homepage": "https://github.com/mayalust/vue-editor#readme",
   "dependencies": {
