--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proudsmart-vue-editor",
-  "version": "1.0.29",
+  "version": "1.0.30",
   "description": "vue-editor",
   "main": "dist/veditor.js",
   "scripts": {
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/mayalust/vue-editor#readme",
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "echarts": "^4.1.0",
     "vue": "^2.5.16"
   }
 }
