--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proudsmart-vue-editor",
-  "version": "1.0.35",
+  "version": "1.0.36",
   "description": "vue-editor",
   "main": "dist/veditor.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "url": "https://github.com/mayalust/vue-editor/issues"
   },
   "bin": {
-    "veditor": "./dist/server.js"
+    "veditor1": "./dist/server.js"
   },
   "homepage": "https://github.com/mayalust/vue-editor#readme",
   "dependencies": {
